# extractlint

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: make_sample_pdf.py  test_run.py
src/extractlint/: __init__.py  api.py  core.py  registry.py  render.py  scoring.py
src/extractlint/adapters/: pdfplumber_adapter.py  pymupdf_adapter.py
tests/: test_basic.py
